Fixing hosting alignment

--- a/stylesheets/fiddle.css
+++ b/stylesheets/fiddle.css
@@ -236,13 +236,15 @@ pre.results, .resultSetPreview li pre {
 #hosting {
 	display: block;
 	margin: 20px auto;
-	//width: 800px;
+	text-align: center;
 }
 #hosting h4 {
 	text-align: center;
 }
 #hostingPartners {
 	padding: 0px;
+	display: inline-block;
+	text-align: left;
 	list-style-type: none;
 }
 
